# rust-bible

./: Cargo.toml
rust-resources/: rust-notes.md
rust-wiki/: Cargo.toml
rust-wiki/src/: lib.rs  main.rs
rust-wiki/src/_0_ecosystem/: cargo.md
rust-wiki/src/_1_basics/: _2_datatypes.rs  _4_control_flow.rs  _5_io_and_logging.rs
rust-wiki/src/_2_ownership/: _2_owners.rs  _2_owners_and_scope.rs  _3_references.rs  _3_references_and_lifetimes.rs  _4_slices.rs
rust-wiki/src/_3_datatypes_and_traits/: _1_structs.rs  _3_methods.rs  _4_traits.rs
rust-wiki/src/_3_structs_enums_traits/: _2_enums.rs  _3_methods.rs
rust-wiki/src/_4_generics/: _1_generic_types.rs  _2_lifetime_annotations.rs
rust-wiki/src/_5_functional_features/: _1_closures.rs  _2_iterators.rs
rust-wiki/src/memory_old_notes/: _3_memory_references.rs
rustlings/: .gitignore  rust-project.json
src/: lib.rs  main.rs
src/1_basics/: 1_variables.rs  2_datatypes.rs  3_functions.rs  4_control_flow.rs
src/2_memory/: 1_memory_layout.rs  3_references_and_pointers.rs  4_slices.rs  ownership.rs
src/_1_basics/: _1_variables.rs  _2_datatypes.rs
src/_2_memory/: _1_memory_layout.rs  _2_owners.rs  _2_ownership.rs  _3_references.rs  _3_references_and_pointers.rs  _4_slice_references.rs  _4_slices.rs
src/_3_structs/: _1_structs.rs  _2_methods.rs
src/_3_structs_and_enums/: _1_structs.rs  _2_enums.rs  _3_associated_functions.rs  _3_methods.rs  _4_generics.rs  _4_traits.rs
src/_3_structs_enums_traits/: _3_methods.rs  _4_traits.rs  _5_generics.rs  _6_lifetimes.rs
src/_3_structured_data/: _1_structs.rs  (+2 more)
(+2 files in other folders)
